--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -7,7 +9,22 @@
     <meta name="description" content="Example" />
   </head>
   <body>
-    <h2>Victor's Running Blog</h2>
-    <p>Hello World!</p>
+
+    <div id="blog-header">
+      <span id="running-icon-span">
+        <i class="fas fa-running"></i>
+      </span>
+      <p id="blog-name">My Running Blog</p>
+    </div>
+    <div id="sidebar-menu">
+      <a>About Me</a>
+      <a>Guestbook</a>
+      <a>Links</a>
+    </div>
+    <div class="flex-grid">
+      <div class="col">a</div>
+      <div class="col">b</div>
+      <div class="col">c</div>
+    </div>
   </body>
 </html>
