Added blog divs

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
       </span>
       <p id="blog-name">My Running Blog</p>
     </div>
-    <div id="sidebar-menu">
-      <a>About Me</a>
-      <a>Guestbook</a>
-      <a>Links</a>
-    </div>
     <div class="flex-grid">
-      <div class="col">a</div>
-      <div class="col">b</div>
-      <div class="col">c</div>
+      <div id="sidebar-menu">
+        <a>About Me</a>
+        <a>Guestbook</a>
+        <a>Links</a>
+      </div>
+      <div id="blog-post-container">
+        <div id="blog-posts">How I learned to love treadmill running because of COVID-19</div>
+        <div id="blog-posts">TBD</div>
+        <div id="blog-posts">TBD</div>
+      </div>
     </div>
   </body>
 </html>
