More refactoring. Added image.

--- a/index.html
+++ b/index.html
@@ -10,35 +10,31 @@
     <meta name="description" content="Example" />
   </head>
   <body>
-
-  <div id="container">
-
-    <div id="header" class="container-element">
-      <span id="running-icon-span">
-        <i class="fas fa-running"></i>
-      </span>
-      <p id="blog-name">My Running Blog</p>
-      <hr id="divider" class="solid">
+    <div id="container">
+      <div id="header" class="container-element">
+        <span id="running-icon-span">
+          <i class="fas fa-running"></i>
+        </span>
+        <h2 id="blog-name">My Running Blog</h2>
+        <hr id="divider" class="solid">
+      </div>
+      <div id="sidebar-menu" class="container-element">
+          <a href="index.html">Home</a>
+          <a>About Me</a>
+          <a>Guestbook</a>
+      </div>
+      <div id="blog-post-container">
+        <a href="blog_post.html">
+          <div id="blog-posts">
+            How I learned to love running on the treadmill during quarantine
+          </div>
+        </a>
+        <div id="blog-posts">Not yet published</div>
+        <div id="blog-posts">TBD</div>
+      </div>
+      <div id="footer" class="container-element">
+        <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
+      </div>
     </div>
-
-    <div id="sidebar-menu" class="container-element">
-        <a href="index.html">Home</a>
-        <a>About Me</a>
-        <a>Guestbook</a>
-        <a>Links</a>
-    </div>
-    <div id="blog-post-container">
-      <a href="blog_post.html">
-        <div id="blog-posts">How I learned to love running on the treadmill during quarantine</div>
-      </a>
-      <div id="blog-posts">TBD</div>
-      <div id="blog-posts">TBD</div>
-    </div>
-
-    <div id="footer" class="container-element">
-      <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
-    </div>
-
-  </div>
   </body>
 </html>
