--- a/blog_post.html
+++ b/blog_post.html
@@ -10,23 +10,35 @@
     <meta name="description" content="Example" />
   </head>
   <body>
-    <div id="blog-header">
-      <span id="running-icon-span">
-        <i class="fas fa-running"></i>
-      </span>
-      <p id="blog-name">My Running Blog</p>
-      <hr id="divider" class="solid">
-    </div>
-    <div class="flex-grid">
-      <div id="sidebar-menu">
-        <a href="index.html">Home</a>
-        <a>About Me</a>
-        <a>Guestbook</a>
-        <a>Links</a>
+
+    <div id="container">
+      <div id="header" class="container-element">
+        <span id="running-icon-span">
+          <i class="fas fa-running"></i>
+        </span>
+        <h2 id="blog-name">How I learned to love running on the treadmill during quarantine</h2>
+        <hr id="divider" class="solid">
+      </div>
+      <div id="sidebar-menu" class="container-element">
+          <a href="index.html">Home</a>
+          <a>About Me</a>
+          <a>Guestbook</a>
       </div>
       <div id="blog-post-container">
-        <div id="blog-posts">Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on thier couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</div>
+        <div id="blog-posts">
+          <figure>
+            <img id="card-image" src="images/treadmill.jpg"/>
+            <figcaption>Treadmill running stinks.</figcaption>
+          </figure>
+          <p>Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on thier couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</p>
+        </div>
+      </div>
+      <div id="footer" class="container-element">
+        <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
       </div>
     </div>
   </body>
 </html>
+
+<!--
+//        <div id="blog-posts">Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on thier couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</div> -->
