Added author info

--- a/blog_post.html
+++ b/blog_post.html
@@ -31,6 +31,10 @@
             <figcaption>Treadmill running stinks.</figcaption>
           </figure>
           <p>Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on thier couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</p>
+          <div id="author-div">
+            <img id="avatar" src="images/avatar.png"></img>
+            <p id="blog-info">Written 04/27/20 by Victor Ochoa (Software Engineer at AT&T)</p>
+          </div>
         </div>
       </div>
       <div id="footer" class="container-element">
