--- a/blog_post.html
+++ b/blog_post.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="css/blog_post.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <html>
   <head>
     <meta charset="utf-8" />
@@ -16,13 +17,14 @@
         <span id="running-icon-span">
           <i class="fas fa-running"></i>
         </span>
-        <h2 id="blog-name">How I learned to love running on the treadmill during quarantine</h2>
+        <h3 id="blog-name">How I learned to love running on the treadmill during quarantine</h3>
         <hr id="divider" class="solid">
       </div>
       <div id="sidebar-menu" class="container-element">
           <a href="index.html">Home</a>
           <a>About Me</a>
           <a>Guestbook</a>
+          <button type="button" class="btn btn-sm btn-primary disabled">Subscribe</button>
       </div>
       <div id="blog-post-container">
         <div id="blog-posts">
