--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="css/main_site_style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <html>
   <head>
     <meta charset="utf-8" />
@@ -22,13 +23,14 @@
           <a href="index.html">Home</a>
           <a>About Me</a>
           <a>Guestbook</a>
+          <button type="button" class="btn btn-sm btn-primary disabled">Subscribe</button>
       </div>
       <div id="blog-post-container">
-        <a href="blog_post.html">
-          <div id="blog-posts">
+        <div id="blog-posts">
+          <a href="blog_post.html">
             How I learned to love running on the treadmill during quarantine
-          </div>
-        </a>
+          </a>
+        </div>
         <div id="blog-posts">Not yet published</div>
         <div id="blog-posts">TBD</div>
       </div>
