Misc clean up and refactor

--- a/blog_post.html
+++ b/blog_post.html
@@ -2,30 +2,35 @@
 <link rel="stylesheet" href="css/main_site_style.css">
 <link rel="stylesheet" href="css/blog_post.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <html>
+
   <head>
     <meta charset="utf-8" />
     <title>Victor's Running Blog</title>
     <meta name="description" content="Example" />
   </head>
+
   <body>
 
     <div id="container">
-      <div id="header" class="container-element">
+
+      <header id="header" class="container-element">
         <span id="running-icon-span">
           <i class="fas fa-running"></i>
         </span>
         <h3 id="blog-name">How I learned to love running on the treadmill during quarantine</h3>
         <hr id="divider" class="solid">
-      </div>
+      </header>
+
       <div id="sidebar-menu" class="container-element">
           <a href="index.html">Home</a>
           <a>About Me</a>
           <a>Guestbook</a>
           <button type="button" class="btn btn-sm btn-primary disabled">Subscribe</button>
       </div>
+
       <div id="blog-post-container">
         <div id="blog-posts">
           <figure>
@@ -39,12 +44,13 @@
           </div>
         </div>
       </div>
-      <div id="footer" class="container-element">
-        <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
-      </div>
-    </div>
-  </body>
-</html>
 
-<!--
-//        <div id="blog-posts">Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on thier couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</div> -->
+      <footer id="footer" class="container-element">
+        <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
+      </footer>
+
+    </div>
+
+  </body>
+
+</html>
