--- a/index.html
+++ b/index.html
@@ -2,29 +2,36 @@
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/main_site_style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <html>
+
   <head>
     <meta charset="utf-8" />
     <title>Victor's Running Blog</title>
     <meta name="description" content="Example" />
   </head>
+
   <body>
+
     <div id="container">
-      <div id="header" class="container-element">
+
+      <header id="header" class="container-element">
         <span id="running-icon-span">
           <i class="fas fa-running"></i>
         </span>
         <h2 id="blog-name">My Running Blog</h2>
         <hr id="divider" class="solid">
-      </div>
+      </header>
+
       <div id="sidebar-menu" class="container-element">
           <a href="index.html">Home</a>
           <a>About Me</a>
           <a>Guestbook</a>
           <button type="button" class="btn btn-sm btn-primary disabled">Subscribe</button>
       </div>
+
       <div id="blog-post-container">
         <div id="blog-posts">
           <a href="blog_post.html">
@@ -34,9 +41,13 @@
         <div id="blog-posts">Not yet published</div>
         <div id="blog-posts">TBD</div>
       </div>
-      <div id="footer" class="container-element">
+
+      <footer id="footer" class="container-element">
         <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
-      </div>
+      </footer>
+
     </div>
+
   </body>
+
 </html>
