Major refactor and restructure

--- a/blog_post.html
+++ b/blog_post.html
@@ -3,7 +3,6 @@
 <link rel="stylesheet" href="css/blog_post.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <html>
 
   <head>
@@ -13,23 +12,25 @@
   </head>
 
   <body>
-
-    <div id="container">
-
-      <header id="header" class="container-element">
-        <span id="running-icon-span">
+    <header>
+      <div id="blog-title">
+        <span id="running-icon">
           <i class="fas fa-running"></i>
         </span>
-        <h3 id="blog-name">How I learned to love running on the treadmill during quarantine</h3>
-        <hr id="divider" class="solid">
-      </header>
-
-      <div id="sidebar-menu" class="container-element">
-          <a href="index.html">Home</a>
-          <a>About Me</a>
-          <a>Guestbook</a>
-          <button type="button" class="btn btn-sm btn-primary disabled">Subscribe</button>
+        <h2>My Running Blog</h2>
       </div>
+      <div id="nav-menu">
+        <a href="index.html">
+          <h3>Home</h3>
+        </a>
+        <a href="blog_post.html">
+          <h3>Most Recent</h3>
+        </a>
+      </div>
+    </header>
+    <div id="container">
+
+
 
       <div id="blog-post-container">
         <div id="blog-posts">
