Added media query for small screen

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="css/index.css">
-<link rel="stylesheet" href="css/main_site_style.css">
+<!-- <link rel="stylesheet" href="css/main_site_style.css"> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 
@@ -16,7 +16,7 @@
 
     <div id="site-container">
 
-      <header>
+      <nav>
         <div id="blog-title">
           <span id="running-icon">
             <i class="fas fa-running"></i>
@@ -31,7 +31,7 @@
             <h3>Most Recent</h3>
           </a>
         </div>
-      </header>
+      </nav>
       <section class="blog-post" id="most-recent-blog">
         <!-- <div> -->
         <h3>
@@ -50,9 +50,10 @@
       </section>
       <section class="blog-post" id="blog-3">
         <div>
-          I bought a new FitBit
+          <h3>
+            I bought a new FitBit
+          </h3>
         </div>
-
       </section>
       <section id="subscribe">
           <input placeholder="Enter your email"/>
