--- a/blog_post.html
+++ b/blog_post.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/main_site_style.css">
 <link rel="stylesheet" href="css/blog_post.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
@@ -12,42 +11,51 @@
   </head>
 
   <body>
-    <header>
-      <div id="blog-title">
-        <span id="running-icon">
-          <i class="fas fa-running"></i>
-        </span>
-        <h2>My Running Blog</h2>
-      </div>
-      <div id="nav-menu">
-        <a href="index.html">
-          <h3>Home</h3>
-        </a>
-        <a href="blog_post.html">
-          <h3>Most Recent</h3>
-        </a>
-      </div>
-    </header>
-    <div id="container">
-
-
-
-      <div id="blog-post-container">
-        <div id="blog-posts">
-          <figure>
-            <img id="card-image" src="images/treadmill.jpg"/>
-            <figcaption>Treadmill running stinks.</figcaption>
-          </figure>
-          <p>Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on thier couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</p>
-          <div id="author-div">
-            <img id="avatar" src="images/avatar.png"></img>
-            <p id="blog-info">Written 04/27/20 by Victor Ochoa (Software Engineer at AT&T)</p>
-          </div>
+    <div id="site-container">
+      <nav>
+        <div id="blog-title">
+          <span id="running-icon">
+            <i class="fas fa-running"></i>
+          </span>
+          <h2>My Running Blog</h2>
         </div>
-      </div>
+        <div id="nav-menu">
+          <a href="index.html">
+            <h3>Home</h3>
+          </a>
+          <a href="blog_post.html">
+            <h3>Most Recent</h3>
+          </a>
+        </div>
+      </nav>
 
-      <footer id="footer" class="container-element">
-        <a id="github" href="https://github.com/VictorMOchoa"><i class="fab fa-github fa-sm"></i> VictorMOchoa</a>
+      <header>
+        <h3>
+          How I learned to love running on the treadmill during quarantine
+        </h3>
+      </header>
+
+      <section id="author-info">
+        <figure>
+          <img id="avatar" src="images/avatar.png"></img>
+          <figcaption>
+          Victor Ochoa is Senior Software Engineer at AT&T. He has a Master's Degree in Software Engineering and a Bachelor's in Computer Science. In his spare time, he enjoys reading, boxing, and competitve races.
+          </figcaption>
+        </figure>
+      </section>
+      <section id="blog-content">
+          <p>Due to the stay at home orders here in California, I've found myself at home with a lot of free time on my hands. Considering that I can't go anywhere and also because I'm not wasting two hours a day in Los Angeles traffic, I've been able to spend more time burning through my Netflix queue. Unlike many people who are watching on their couch, I've used this extra time to run up to two hours a day on my treadmill. This is the only time that I allow myself to watch Netflix and I look forward to it every day.</p>
+      </section>
+      <section id="subscribe">
+          <input placeholder="Enter your email"/>
+          <button id="subscribe-btn" disabled>Subscribe</button>
+      </section>
+      <footer id="footer">
+        <p>Share this blog on social media:</p>
+        <a id="github" href="http://github.com"><i class="fab fa-github fa-sm"></i> </a>
+        <a id="linked" href="http://linkedin.com"><i class="fab fa-linkedin fa-sm"></i></a>
+        <a id="linked" href="http://facebook.com"><i class="fab fa-facebook fa-sm"></i></a>
+        <a id="linked" href="http://twitter.com"><i class="fab fa-twitter fa-sm"></i></a>
       </footer>
 
     </div>
